--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
         </activity>
 
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDc7kvDA0DtNA1N6_p_83Qnqi9SBQVpkzM" />
+            android:name="com.google.android.geo.API_KEY" />
 
         <meta-data
             android:name="com.google.android.gms.version"
